view more button responsive

--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
     </div>
   </section>
 
-  <section class="ismv3-marquee display-marq">
+  <section class="ismv3-marquee desktop-version">
     <div class="container">
       <div class="row">
-        <div class="col-md-2">  
+        <div class="col-md-4 col-lg-2">  
           <div class="align-content-center">
             <p class="marquee-heading m-0"><span class="marquee-icon"><img
                   src="images/icons/announcement_icon.png"></span>Announcements :</p>
           </div>
         </div>
-        <div class="col-md-10">    
+        <div class="col-md-8 col-lg-10">    
           <div class="align-content-center">
             <marquee>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain, SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain</marquee>
           </div>
@@ -197,7 +197,7 @@
       </div>
     </div>
   </section>
-  <section class="ismv3-marquee mobile-marq">
+  <section class="ismv3-marquee mobile-version">
     <div class="container">
       <div class="row">
                     <marquee>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain, SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain</marquee>
@@ -231,11 +231,11 @@
   <section class="notification-section py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mb-4">
+        <div class="col-sm-12 col-md-6 mb-4">
           <p class="main-heading"><span><img src="images/icons/notification_icon.png"></span>Notifications</p>
           <p class="sub-heading">What’s New</p>
         </div>
-        <div class="col-md-6 text-sm-center text-md-end mb-4">
+        <div class="col-sm-12 col-md-6 text-sm-center text-md-end mb-4 desktop-version">
           <a href="/notices.html" class="theme-Btn theme-Btn-dark">View More <span><img
                 src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
         </div>
@@ -296,6 +296,10 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="col-sm-12 text-center mobile-version">
+      <a href="/notices.html" class="theme-Btn theme-Btn-dark">View More <span><img
+            src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
     </div>
   </section>
 
@@ -827,7 +831,7 @@
           <p class="main-heading text-white"><span><img src="images/icons/event_icon.png"></span>EVENTS</p>
           <p class="sub-heading text-white border-bot">Conferences and Summits</p>
         </div>
-        <div class="col-md-6 text-sm-center text-md-end mb-4">
+        <div class="col-sm-12 col-md-6 text-sm-center text-md-end mb-4 desktop-version">
           <a href="/events.html" class="theme-Btn theme-Btn-light">View More<span><img
                 src="./images/arrow-btn_icon_dark.png" alt="" class="ml-3"></span></a>
         </div>
@@ -872,6 +876,10 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-12 text-center mobile-version">
+        <a href="/events.html" class="theme-Btn theme-Btn-light ">View More<span><img
+              src="./images/arrow-btn_icon_dark.png" alt="" class="ml-3"></span></a>
+      </div>
     </div>
   </section>
 
@@ -882,7 +890,7 @@
           <p class="main-heading"><span><img src="images/icons/gallery_icon.png"></span>GALLERY</p>
           <p class="sub-heading">Visual Highlights</p>
         </div>
-        <div class="col-md-6 text-sm-center text-md-end mb-4">
+        <div class="col-sm-12 col-md-6 text-sm-center text-md-end mb-4 desktop-version">
           <a href="/gallery.html" class="theme-Btn theme-Btn-dark">View More<span><img src="./images/arrow-btn_icon.png"
                 alt="" class="ml-3"></span></a>
         </div>
@@ -952,6 +960,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="col-sm-12 text-center mobile-version mt-3">
+        <a href="/gallery.html" class="theme-Btn theme-Btn-dark">View More<span><img src="./images/arrow-btn_icon.png"
+              alt="" class="ml-3"></span></a>
       </div>
     </div>
     </div>
