--- a/events.html
+++ b/events.html
@@ -175,7 +175,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-4">
-          <a href="#">
+          <a href="/events-semicon2024.html">
             <div class="main-event-cards">
               <img src="/images/momento.webp"
                 class="img-fluid br-8">
@@ -190,7 +190,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#">
+          <a href="/events-SES2024.html">
             <div class="main-event-cards">
               <img
                 src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
@@ -206,7 +206,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#">
+          <a href="/events-workshopMeity.html">
             <div class="main-event-cards">
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/ism1_4.jpg"
                 class="img-fluid br-8">
@@ -221,7 +221,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#">
+          <a href="/events-semicon2023.html">
             <div class="main-event-cards">
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/ism1_1.png"
                 class="img-fluid br-8">
@@ -236,7 +236,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#">
+          <a href="/events-semiconferrence2023.html">
             <div class="main-event-cards">
               <img
                 src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/feb_2023/3.JPG"
@@ -252,7 +252,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#">
+          <a href="/events-semicon2022.html">
             <div class="main-event-cards">
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
                 class="img-fluid br-8">
