meity workshop done

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -195,7 +195,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4">
-          <a href="">
+          <a href="/events-semicon2024.html">
             <div class="event-cards">
               <img src="/images/momento.webp" class="img-fluid br-8">
               <div class="event-content  pt-3">
@@ -210,7 +210,7 @@
           </a>
         </div>
         <div class="col-md-4 mb-4">
-          <a href="">
+          <a href="/events-semicon2023.html">
             <div class="event-cards">
               <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG" class="img-fluid br-8">
               <div class="event-content  pt-3">
@@ -224,7 +224,7 @@
           </a>
         </div>
         <div class="col-md-4 mb-4">
-          <a href="">
+          <a href="/events-semicon2022.html">
             <div class="event-cards">
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg" class="img-fluid br-8">
               <div class="event-content pt-3">
