--- a/events-semicon2022.html
+++ b/events-semicon2022.html
@@ -175,7 +175,8 @@
       </div>
         <div class="col-md-6 d-flex flex-column justify-content-center">
           <div class="">
-            <p class="main-heading mb-3"><strong>SemiconIndia Conference 2022</strong></p>
+              <p class="main-heading">ABOUT</p>
+              <p class="sub-heading">SemiconIndia 2022</p>
             <p>The inaugural <strong>‘SemiconIndia 2022’</strong> Conference is being organised by India Semiconductor Mission in partnership with industry and industry associations under the visionary leadership of Hon'ble Prime Minister Shri Narendra Modi with the aim to make India a global hub for Semiconductor Design, Manufacturing and Technology Development which will help propel the vision of India Semiconductor Mission.</p>
             <p><strong>Theme:</strong> Catalyzing India’s Semiconductor Ecosystem</p>
             <p><strong>Vision:</strong> To position India on the Semiconductor map of the world and build a vibrant semiconductor innovation and manufacturing ecosystem.</p>
@@ -183,25 +184,24 @@
 
         </div>
       </div>
+    </div>
+  </section>
+  <section class="py-5">
+    <div class="container">
+      <div class="row"> 
+       <div class="col-sm-12">
+        <p class="sub-heading mb-4">HIGHLIGHTS</p>
+       </div>
+      </div>
       <div class="row">
-        <div class="col-md-6 d-flex flex-column justify-content-center">
-          <div class="">
-            <p class="main-heading my-3"><strong>Conference Highlights</strong></p>
-            <ul>
-              <li>The Conference was inaugurated by Hon’ble Prime Minister of India, Shri Narendra Modi via Video Conference on 29th April, 2022 at 11:00 AM.
-              </li>
-              <li>The Conference brings together global leaders from Industry, Academia and Research Institutions.
-              </li>
-              <li>The Steering Committee for SemiconIndia Conference 2022 includes a mix of Startups, Academia and Global Industry Leaders demonstrating the Government’s collaborative approach towards powering India’s semiconductor and electronics manufacturing ambitions.
-              </li>
-              <li>The conference serves as the formal launch pad of India’s semiconductor strategy and policy which envisions making India a global hub for Electronics System Design and Manufacturing.
-              </li>
-            </ul>
-          </div>
-
-        </div>
-        <div class="col-md-6 align-content-center">
-          <div class=""><img src="./images/momento.webp" alt="" class="img-fluid"></div>
+        <div class="col-sm-12 d-flex flex-column">
+          <div class="highlights-cards">
+						<h3 class="mb-3">Electronics Industry Is Largest And Fastest Growing Segments</h3>
+						<p>The Conference was inaugurated by Hon’ble Prime Minister of India, Shri Narendra Modi via Video Conference on 29th April, 2022 at 11:00 AM.</p>
+            <p>The Conference brings together global leaders from Industry, Academia and Research Institutions.</p>
+            <p>The Steering Committee for SemiconIndia Conference 2022 includes a mix of Startups, Academia and Global Industry Leaders demonstrating the Government’s collaborative approach towards powering India’s semiconductor and electronics manufacturing ambitions.</p>
+            <p>The conference serves as the formal launch pad of India’s semiconductor strategy and policy which envisions making India a global hub for Electronics System Design and Manufacturing.</p>
+					</div>
         </div>
       </div>
     </div>
