--- a/events-semiconferrence2023.html
+++ b/events-semiconferrence2023.html
@@ -177,7 +177,8 @@
       </div>
         <div class="col-md-6 d-flex flex-column justify-content-center">
           <div class="">
-            <p class="main-heading mb-3"><strong>Objectives</strong></p>
+            <p class="main-heading">ABOUT</p>
+            <p class="sub-heading">SemiconIndia Conference 2023</p>
             <p>To encourage and ensure the establishment of semiconductor fabs with requisite manufacturing capabilities
               and sustainability strategies, ISM has taken the initiative to organize this conference.</p>
             <p>The present conference is to bring to light various initiatives taken by the Government including
@@ -187,17 +188,23 @@
               the industry. The outcomes of this conference are expected to provide a thrust toward building a vibrant
               semiconductor manufacturing ecosystem in India.</p>
           </div>
-
-
         </div>
       </div>
-      <div class="row">
- 
-        <div class="col-md-6 d-flex flex-column justify-content-center">
-
-          <div class="">
-            <p class="main-heading my-3"><strong>Electronics Industry Is Largest And Fastest Growing Segments</strong></p>
-            <p>The electronics industry is one of the world’s largest and fastest growing segments of the economy for
+    </div>
+  </section>
+  
+  <section class="py-5">
+    <div class="container">
+      <div class="row"> 
+        <div class="col-sm-12">
+         <p class="sub-heading mb-4">HIGHLIGHTS</p>
+        </div>
+       </div>
+      <div class="row"> 
+        <div class="col-sm-12 d-flex flex-column">
+          <div class="highlights-cards">
+						<h3 class="mb-3">Electronics Industry Is Largest And Fastest Growing Segments</h3>
+						<p>The electronics industry is one of the world’s largest and fastest growing segments of the economy for
               which semiconductors and displays are the backbone constituting a significant portion to the total Bill of
               Material. Fostering the Hon’ble Prime Minister’s vision of AatmaNirbhar Bharat, the Ministry of
               Electronics &Information Technology has been actively working to create a conducive environment for
@@ -205,11 +212,7 @@
             <p>With a view to ensure the development of a robust and sustainable semiconductor and display ecosystem in
               India, Semicon India Programme was introduced with an outlay of INR 76,000 crore. The said program aims to
               extend fiscal support for establishment of the following:</p>
-          </div>
-
-        </div>
-        <div class="col-md-6 align-content-center">
-          <div class=""><img src="./images/momento.webp" alt="" class="img-fluid"></div>
+					</div>
         </div>
       </div>
     </div>
