--- a/events-workshopMeity.html
+++ b/events-workshopMeity.html
@@ -222,8 +222,7 @@
   </section>
   <section class="py-5">
     <div class="container">
-      <div class="row">
-       
+      <div class="row">       
         <div class="col-md-6 d-flex flex-column justify-content-center">
           <div class="">
             <p>To sentisize researchers applying under 1st Joint Call for proposals under MeitY - NSF Research Collaboration in the areas of</p>
@@ -234,36 +233,34 @@
               <li>Sustainability and green technologies</li>
               <li>Intelligent transportation systems</li>
             </ul>
-            <div class="shadow rounded  ism-highlightedBox ism-highlightedBox--webinarWrapper">
-              <div class="webinar">
+            <div class="d-flex mb-4">
+              <div class="webinar d-flex me-4">
                 <div class="webinar-icon">
                   <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
                 </div>
-                <div class="webinar-text">
+                <div class="webinar-text ms-3">
                   <div class="webinar-text__heading">First Webinar </div>
                   <div class="webinartext__desc">8th Sept 2023</div>
-
                 </div>
               </div>
 
-              <div class="webinar">
+              <div class="webinar  d-flex ">
                 <div class="webinar-icon">
                   <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
                 </div>
-                <div class="webinar-text">
+                <div class="webinar-text ms-3">
                   <div class="webinar-text__heading"> Second Webinar</div>
                   <div class="webinartext__desc">13th Oct 2023</div>
-
                 </div>
               </div>
             </div>
             <div class="ism-elem2_btn d-flex justify-content-start">
-              <a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/18/1695038660_MeitY_version_Call_for_Joint_Proposals_finalsss_(3).pdf" class="ism-btn ism-btn--theme small me-2" target="_blank">
+              <a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/18/1695038660_MeitY_version_Call_for_Joint_Proposals_finalsss_(3).pdf" class="theme-Btn theme-Btn-dark small me-2" target="_blank">
                 <i class="fa fa-file-pdf me-2" aria-hidden="true"> </i>
                 <span>Download</span>
               </a>
             
-              <a href="https://www.mygov.in/task/joint-call-proposal-under--research-collaboration/" target="_blank" class="ism-btn ism-btn--theme small">
+              <a href="https://www.mygov.in/task/joint-call-proposal-under--research-collaboration/" target="_blank" class="theme-Btn theme-Btn-dark small">
                 <span> Apply Here </span> <i class="fa fa-angle-right ms-2" aria-hidden="true"></i>
               </a>
 
@@ -293,7 +290,7 @@
           <div class="p-5 d-flex flex-column justify-content-center">
             <div class="event_address text-white text-left p-0 mb-3">
   
-              Sushma Swaraj Bhawan,<br> Chanakya Puri, New Delhi
+              <h2>Sushma Swaraj Bhawan,<br> Chanakya Puri, New Delhi</h2>
             </div>
             <div class="event_address-buttn mb-3 justify-content-start">
               <a class="ism-btn ism-btn--white small text-center" href="https://www.google.com/maps/search/Sushma+Swaraj+Bhawan,+Chanakya+Puri,+New+Delhi+near+by+hotel+/@28.5960641,77.1703863,15z?entry=ttu" target="_blank">
@@ -359,10 +356,10 @@
           <p class="sub-heading">@MEITY - NSF</p>
         </div>
       </div>
-      <div class="row d-none">
-        <div class="col-12 col-lg-10 mx-auto">
-          <div class="shadow rounded  ism-highlightedBox ism-highlightedBox--webinarWrapper">
-            <div class="webinar">
+      <div class="row mb-4">
+        <div class="col-sm-12 col-lg-12">
+          <div class="d-flex">
+            <div class="webinar m-1">
               <div class="webinar-icon">
                 <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
               </div>
@@ -373,7 +370,7 @@
               </div>
             </div>
 
-            <div class="webinar">
+            <div class="webinar  m-1">
               <div class="webinar-icon">
                 <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
               </div>
@@ -384,7 +381,7 @@
               </div>
             </div>
 
-            <div class="webinar">
+            <div class="webinar  m-1">
               <div class="webinar-icon">
                 <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
               </div>
@@ -394,7 +391,7 @@
 
               </div>
             </div>
-            <div class="webinar">
+            <div class="webinar  m-1">
               <div class="webinar-icon">
                 <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
               </div>
@@ -404,7 +401,7 @@
 
               </div>
             </div>
-            <div class="webinar">
+            <div class="webinar  m-1">
               <div class="webinar-icon">
                 <img src="https://ism.gov.in/static/dist/images_2/icons/pdf-icon.png" alt="ism banner" class="img-fluid">
               </div>
@@ -420,9 +417,9 @@
       <div class="row">
         <div class="col-12 col-lg-4">
           <div class="details-cards v3">
-            <h3 class="details-cards_title">
+            <p class="details-cards_title">
               Smt. Sunita Verma
-            </h3>
+            </p>
             <p class="details-cards_content">
               Scientist 'G' &amp; Group<br>
               Coordinator<br>
@@ -433,9 +430,9 @@
         </div>
         <div class="col-12 col-lg-4">
           <div class="details-cards v3">
-            <h3 class="details-cards_title">
+            <p class="details-cards_title">
               Shri S. K. Marwaha
-            </h3>
+            </p>
             <p class="details-cards_content">
               Scientist G and Group Coordinator,<br>
               R&amp;D in Convergence, Communications &amp; Broadband Technologies<br>
@@ -446,9 +443,9 @@
         </div>
         <div class="col-12 col-lg-4">
           <div class="details-cards v3">
-            <h3 class="details-cards_title">
+            <p class="details-cards_title">
               Ms. Tulika Pandey
-            </h3>
+            </p>
             <p class="details-cards_content">
               Scientist G and Group<br>
               Coordinator<br>
