--- a/index.html
+++ b/index.html
@@ -838,42 +838,48 @@
       </div>
       <div class="row">
         <div class="col-md-4 mb-4">
-          <div class="event-cards">
-            <img src="/images/momento.webp" class="img-fluid br-8">
-            <div class="event-content  pt-3">
-              <h3>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain
-              </h3>
-              <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>11th Sep - 13th Sep
-                2024</p>
-              <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Greater Noida,
-                Uttar Pradesh</p>
-            </div>
-          </div>
+<a href="/events-semicon2024.html">
+  <div class="event-cards">
+    <img src="/images/momento.webp" class="img-fluid br-8">
+    <div class="event-content  pt-3">
+      <h3>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain
+      </h3>
+      <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>11th Sep - 13th Sep
+        2024</p>
+      <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Greater Noida,
+        Uttar Pradesh</p>
+    </div>
+  </div>
+</a>
         </div>
         <div class="col-md-4 mb-4">
-          <div class="event-cards">
-            <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG" class="img-fluid br-8">
-            <div class="event-content  pt-3">
-              <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-              <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>28th July - 30th
-                July 2023</p>
-              <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Gandhinagar,
-                Gujarat</p>
-            </div>
-          </div>
+     <a href="/events-semicon2023.html">
+      <div class="event-cards">
+        <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG" class="img-fluid br-8">
+        <div class="event-content  pt-3">
+          <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
+          <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>28th July - 30th
+            July 2023</p>
+          <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Gandhinagar,
+            Gujarat</p>
+        </div>
+      </div>
+     </a>
         </div>
         <div class="col-md-4 mb-4">
-          <div class="event-cards">
-            <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
-              class="img-fluid br-8">
-            <div class="event-content pt-3">
-              <h3>SemiconIndia 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
-              <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>29th April - 1st
-                May 2022</p>
-              <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Bengaluru,
-                Karnataka</p>
-            </div>
-          </div>
+  <a href="/events-semicon2022.html">
+    <div class="event-cards">
+      <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
+        class="img-fluid br-8">
+      <div class="event-content pt-3">
+        <h3>SemiconIndia 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
+        <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>29th April - 1st
+          May 2022</p>
+        <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Bengaluru,
+          Karnataka</p>
+      </div>
+    </div>
+  </a>
         </div>
       </div>
       <div class="col-sm-12 text-center mobile-version">
