events dignataries & exhibition added

--- a/events.html
+++ b/events.html
@@ -192,7 +192,7 @@
         <div class="col-md-6 col-lg-4">
           <a href="/events-semicon2023.html">
             <div class="main-event-cards">
-              <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/ism1_1.png"
+              <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
                 class="img-fluid br-8">
               <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
@@ -225,7 +225,7 @@
           <a href="/events-SES2024.html">
             <div class="main-event-cards">
               <img
-                src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
+                src="images/events/SES-2024.webp"
                 class="img-fluid br-8">
               <div class="event-content pt-3">
                 <h3>Semiconductor Executive' Summit (SES) 2024 - Positioning India as a trusted partner in the global semiconductor supply chain</h3>
@@ -242,7 +242,7 @@
           <a href="/events-semiconferrence2023.html">
             <div class="main-event-cards">
               <img
-                src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/feb_2023/3.JPG"
+                src="images/events/Semicon-2023.webp"
                 class="img-fluid br-8">
               <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - SemiconIndia Conference of Electronics Manufacturing Supply Chain Ecosystem</h3>
