--- a/events-semiconferrence2023.html
+++ b/events-semiconferrence2023.html
@@ -2,26 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ISM Website</title>
-  <link rel="icon" href="/images/favicon.png" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/pages/events.css">
+	<link rel="icon" href="/images/favicon.png" type="image/x-icon">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="./css/header.css">
+	<link rel="stylesheet" href="./css/common.css">
+
+	<link rel="stylesheet" href="./css/flickety.css">
+	<link rel="stylesheet" href="./css/pages/events.css">
 </head>
 
 <body>
@@ -173,7 +169,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 align-content-center">
-        <div class=""><img src="./images/momento.webp" alt="" class="img-fluid"></div>
+        <div class=""><img src="./images/events/Semicon-2023.webp" alt="" class="img-fluid"></div>
       </div>
         <div class="col-md-6 d-flex flex-column justify-content-center">
           <div class="">
@@ -217,204 +213,87 @@
       </div>
     </div>
   </section>
-  <section class="gallery-section py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 mb-4">
-          <p class="main-heading d-none"><span><img src="images/icons/gallery_icon.png"></span>GALLERY</p>
-          <p class="sub-heading">GALLERY</p>
-        </div>
-        <!-- <div class="col-sm-12 col-md-6 text-sm-center text-md-end mb-4 desktop-version">
-          <a href="/gallery.html" class="theme-Btn theme-Btn-dark">View More<span><img src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
-        </div> -->
-      </div>
-      <div class="row">
-        <div class="col">
-          <div id="box-2" class="owl-carousel owl-theme owl-loaded owl-drag">
-            <div class="owl-stage-outer">
-              <div class="owl-stage"
-                style="transform: translate3d(-3811px, 0px, 0px); transition: 0.25s; width: 8316px;">
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_31.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_32.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_33.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_34.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_35.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_36.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_15.jpeg"
-                      alt="Owl Image">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_16.jpeg"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_19.jpeg"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_28.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_29.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item active" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_30.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item active" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_31.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item active" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_32.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item active" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_33.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_34.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_35.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_36.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_15.jpeg"
-                      alt="Owl Image">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_16.jpeg"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_19.jpeg"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_28.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_29.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-                <div class="owl-item cloned" style="width: 336.5px; margin-right: 10px;">
-                  <div class="item">
-                    <img
-                      src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/gallery/SemiconGallery_2024_30.webp"
-                      alt="Owl Image" class="img-fluid">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><span
-                  aria-label="Previous">‹</span></button><button type="button" role="presentation"
-                class="owl-next"><span aria-label="Next">›</span></button></div>
-            <div class="owl-dots"><button role="button" class="owl-dot"><span></span></button><button role="button"
-                class="owl-dot active"><span></span></button><button role="button"
-                class="owl-dot"><span></span></button></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+	<section class="gallery-section py-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 mb-4">
+					<p class="sub-heading">GALLERY</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div id="box-2" class="owl-carousel owl-theme owl-loaded owl-drag">
+						<div class="owl-stage-outer">
+							<div class="owl-stage"
+								style="transform: translate3d(-3811px, 0px, 0px); transition: 0.25s; width: 8316px;">
+								<div class="owl-item active" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/1.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/2.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/3.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/4.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/5.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/6.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/8.JPG"
+											alt="Owl Image">
+									</div>
+								</div>
+								<div class="owl-item" style="width: 336.5px; margin-right: 10px;">
+									<div class="item">
+										<img
+											src="https://ism.gov.in/static/dist/images_2/gallery/feb_2023/9.JPG"
+											alt="Owl Image" class="img-fluid">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- <div class="col-sm-12 text-center mobile-version mt-3">
+				<a href="/gallery.html" class="theme-Btn theme-Btn-dark">View More<span><img src="./images/arrow-btn_icon.png"
+							alt="" class="ml-3"></span></a>
+			</div> -->
+		</div>
+
+	</section>
 
   <section class="usefull_link_section py-5">
     <div class="container">
@@ -430,11 +309,11 @@
 
         <table class="table table-bordered">
           <thead>
-            <tr>
-              <th><a class="sort">Start Time</a></th>
-              <th><a class="sort">End Time</a></th>
-              <th><a class="sort">Session Name &amp; Description </a></th>
-              <th colspan="2"><a class="sort">Participants </a></th>
+            <tr class="primary_header">
+              <th width="8%">Start Time</th>
+              <th width="8%">End Time</th>
+              <th>Session Name &amp; Description</th>
+              <th colspan="2">Participants </th>
             </tr>
           </thead>
           <tbody>
@@ -728,9 +607,35 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
-  <script src="./js/header.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/js/bootstrap.bundle.min.js"></script>
+	<script src="./js/header.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script> -->
+	<script src="/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+	<script src="./js/flickety.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+	<script>
+		$('#box-2').owlCarousel({
+			loop: true,
+			margin: 10,
+			nav: true,
+			items: 1,
+			autoplay: true,
+			autoplayTimeout: 3000,
+			autoplayHoverPause: true,
+			responsive: {
+				0: {
+					items: 1
+				},
+				600: {
+					items: 3
+				},
+				1000: {
+					items: 4
+				}
+			}
+		});
+	</script>
 
 </body>
 
